Remove superfluous header, change separator in header, fix inner content spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,7 +122,7 @@ NAVIGATION STYLES
 POSTS & CONTENT STYLES
 *********************/
 #content #inner-content {
-  padding: 1rem 0rem; }
+  padding: 0rem 0rem; }
 
 .page-title .vcard {
   border: 0px;
